<resources>
    <string name="app_name">WareHouse</string>

    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="press_the_button_to_download_data">press to Download Data</string>
    <string name="save_user_data">save user data</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember Me</string>
    <string name="usernameDashBoard">UserName</string>
    <string name="enter_item">Enter Item</string>
</resources>